--- a/BackEnd/SkillForge_1/src/main/resources/application.properties
+++ b/BackEnd/SkillForge_1/src/main/resources/application.properties
@@ -1,11 +1,19 @@
-server.port=8081
+server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/skillforge
-spring.datasource.username=root
-spring.datasource.password=Kavyaa1@skcet
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Use H2 in-memory database by default for quick local startup.
+# To use MySQL, replace or override these properties with your MySQL settings.
+spring.datasource.url=jdbc:h2:mem:skillforge;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# MySQL example (commented out):
+# spring.datasource.url=jdbc:mysql://localhost:3306/skillforge
+# spring.datasource.username=root
+# spring.datasource.password=your_password
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
