--- a/BackEnd/SkillForge_1/src/main/resources/application.properties
+++ b/BackEnd/SkillForge_1/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
+# H2 Console - Access at http://localhost:8080/h2-console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
