--- a/BackEnd/SkillForge_1/src/main/resources/application.properties
+++ b/BackEnd/SkillForge_1/src/main/resources/application.properties
@@ -1,23 +1,31 @@
-server.port=8080
+server.port=8081
 
-# Use H2 in-memory database by default for quick local startup.
-# To use MySQL, replace or override these properties with your MySQL settings.
-spring.datasource.url=jdbc:h2:mem:skillforge;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+# ===========================================
+# DATABASE CONFIGURATION
+# ===========================================
+# Set USE_MYSQL=true in environment variable to use MySQL
+# Or uncomment the MySQL section and comment H2 section
 
-# H2 Console - Access at http://localhost:8080/h2-console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# --- MYSQL (Production - for team members with MySQL) ---
+spring.datasource.url=jdbc:mysql://localhost:3306/skillforge?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
+# --- H2 (Commented - for devs without MySQL) ---
+# spring.datasource.url=jdbc:h2:mem:skillforge;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+# spring.datasource.username=sa
+# spring.datasource.password=
+# spring.datasource.driver-class-name=org.h2.Driver
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+
+# --- JPA Settings ---
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# MySQL example (commented out):
-# spring.datasource.url=jdbc:mysql://localhost:3306/skillforge
-# spring.datasource.username=root
-# spring.datasource.password=your_password
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# H2 Console (disable for MySQL)
+spring.h2.console.enabled=false
