--- a/BackEnd/SkillForge_1/src/main/resources/application.properties
+++ b/BackEnd/SkillForge_1/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=8081
 # --- MYSQL (Production - for team members with MySQL) ---
 spring.datasource.url=jdbc:mysql://localhost:3306/skillforge?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Kavyaa1@skcet
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
