--- a/BackEnd/SkillForge_1/src/main/resources/application.properties
+++ b/BackEnd/SkillForge_1/src/main/resources/application.properties
@@ -1,31 +1,48 @@
+#server.port=8081
+#
+## ===========================================
+## DATABASE CONFIGURATION
+## ===========================================
+## Set USE_MYSQL=true in environment variable to use MySQL
+## Or uncomment the MySQL section and comment H2 section
+#
+## --- MYSQL (Production - for team members with MySQL) ---
+#spring.datasource.url=jdbc:mysql://localhost:3306/skillforgedb
+#
+#spring.datasource.username=root
+#spring.datasource.password=Kavyaa1@skcet
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#
+## --- H2 (Commented - for devs without MySQL) ---
+## spring.datasource.url=jdbc:h2:mem:skillforge;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+## spring.datasource.username=sa
+## spring.datasource.password=
+## spring.datasource.driver-class-name=org.h2.Driver
+## spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+## spring.h2.console.enabled=true
+## spring.h2.console.path=/h2-console
+#
+## --- JPA Settings ---
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#
+## H2 Console (disable for MySQL)
+#spring.h2.console.enabled=false
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.max-file-size=50MB
+#spring.servlet.multipart.max-request-size=50MB
 server.port=8081
 
-# ===========================================
-# DATABASE CONFIGURATION
-# ===========================================
-# Set USE_MYSQL=true in environment variable to use MySQL
-# Or uncomment the MySQL section and comment H2 section
-
-# --- MYSQL (Production - for team members with MySQL) ---
-spring.datasource.url=jdbc:mysql://localhost:3306/skillforge?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/skillforgedb
 spring.datasource.username=root
 spring.datasource.password=Kavyaa1@skcet
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-# --- H2 (Commented - for devs without MySQL) ---
-# spring.datasource.url=jdbc:h2:mem:skillforge;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-# spring.datasource.username=sa
-# spring.datasource.password=
-# spring.datasource.driver-class-name=org.h2.Driver
-# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-# spring.h2.console.enabled=true
-# spring.h2.console.path=/h2-console
-
-# --- JPA Settings ---
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# H2 Console (disable for MySQL)
-spring.h2.console.enabled=false
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
